--- a/src/pages/ConsolePage.scss
+++ b/src/pages/ConsolePage.scss
@@ -53,7 +53,7 @@
         position: relative;
       }
       .content-block-body {
-        color: #6e6e7f;
+        color: white;
         position: relative;
         flex-grow: 1;
         padding: 8px 0px;
@@ -90,7 +90,7 @@
           background-color: #fff;
           border-radius: 1000px;
           min-height: 32px;
-          z-index: 9999;
+          z-index: 0;
           text-align: center;
           white-space: pre;
           &.bottom {
@@ -211,7 +211,7 @@
     .event-details {
       display: flex;
       flex-direction: column;
-      color: #18181b;
+      color: white;
       gap: 8px;
       .event-summary {
         padding: 4px 8px;
